--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "PointToArrow",
   "description": "",
   "version": "0.0.2",
+  "icon": "favicon.ico",
   "publisher": "libing",
   "engines": {
     "vscode": "^1.80.0"
@@ -10,7 +11,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": ["onLanguage:cpp"],
+  "activationEvents": [
+    "onLanguage:cpp"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
