chore: 更新版本号至0.0.4并添加MIT许可证
- 更新package.json和package-lock.json中的版本号
- 添加MIT许可证文件
- 更新favicon.ico图标
- 调整vscode引擎版本要求

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "pointtoarrow",
   "displayName": "PointToArrow",
   "description": "",
-  "version": "0.0.2",
+  "version": "0.0.4",
+  "license": "MIT",
   "icon": "favicon.ico",
   "publisher": "libing",
   "engines": {
